# LiTr

./: build.gradle  settings.gradle
gradle/: publishing.gradle
gradle/wrapper/: gradle-wrapper.properties
litr/: build.gradle
litr-ffmpeg/src/main/cpp/: MediaMuxer.cpp  MediaMuxer.h  NativeMediaMuxer.cpp
litr-ffmpeg/src/main/java/com/linkedin/android/litr/muxers/: NativeMediaMuxer.kt
litr/src/main/cpp/: CMakeLists.txt
litr/src/main/cpp/oboe_resampler/: CMakeLists.txt
litr/src/main/java/com/linkedin/android/litr/: MediaTransformer.java
litr/src/main/java/com/linkedin/android/litr/io/: MediaMuxerMediaTarget.java
litr/src/main/java/com/linkedin/android/litr/render/: GlSingleFrameRenderer.kt
